REFACTOR: Deprecated constructors replaced